@@ -690,7 +690,9 @@ class Branch(object):
             format.repository_format = weaverepo.RepositoryFormat7()
         else:
             format = self.repository.bzrdir.checkout_metadir()
-            format.branch_format = self._format
+            # TODO: jam 20070322 Why is 'repository_format' public, but
+            #       _workingtree_format and _branch_format private?
+            format._branch_format = self._format
         return format
 
     def create_checkout(self, to_location, revision_id=None,
